--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ UI設計<br>
 
 </div>
 <div id="portfolio">
-<a target="_blank" href="https://arlan95220.github.io/Arlan/"><img class="shadow" src="assage/image/1.PNG"></a>
-<a target="_blank" href="https://arlan95220.github.io/Test/" ><img class="shadow" src="assage/image/4.PNG"></a>
-<a target="_blank" href="https://arlan95220.github.io/Resume/"><img class="shadow" src="assage/image/2.PNG"></a>
-<a target="_blank" href="https://arlan95220.github.io/CYIMastronomical.github.io/" ><img class="shadow" src="assage/image/3.PNG"></a>
-<a target="_blank" href="https://arlan95220.github.io/herbarium/"><img class="shadow" src="assage/image/5.PNG"></a>
+<a target="_blank" href="https://arlan95220.github.io/Arlan/"><img class="shadow" src="assage/image/1.png"></a>
+<a target="_blank" href="https://arlan95220.github.io/Test/" ><img class="shadow" src="assage/image/4.png"></a>
+<a target="_blank" href="https://arlan95220.github.io/Resume/"><img class="shadow" src="assage/image/2.png"></a>
+<a target="_blank" href="https://arlan95220.github.io/CYIMastronomical.github.io/" ><img class="shadow" src="assage/image/.3png"></a>
+<a target="_blank" href="https://arlan95220.github.io/herbarium/"><img class="shadow" src="assage/image/5.png"></a>
 </div>
 
 <div id="contact">
